--- a/main1.css
+++ b/main1.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    min-width: 400px;
 }
 
 input {
@@ -19,13 +20,16 @@ button{
     font-weight: bold;
 }
 
-#box {
-    cursor: pointer;
-    background: lightseagreen;
-    padding: 40px;
-    width: 150px;
-    text-align: center;
-    margin: 20px auto;
-    color: white;
-    font-weight: bold;
+
+ul {padding: 0;
+    text-align: left;
+list-style: none;
+margin-top: 20px;
+}
+li{
+margin-top: 5px;
+font-size: 15px;
+}
+li a {
+    color: #5f9341;
 }
