--- a/main1.css
+++ b/main1.css
@@ -14,7 +14,7 @@ input {
 button{
     background: #5f9341;
     color: white;
-    border: 0;
+    border: solid 1px #5f9341;
     padding: 10px 20px;
     margin-top: 4px;
     font-weight: bold;
@@ -31,5 +31,10 @@ margin-top: 5px;
 font-size: 15px;
 }
 li a {
+    color: #5f9341;
+}
+#deleteall-btn {
+    
+    background: white;
     color: #5f9341;
 }
